include_directories(include)
aux_source_directory(src rdt_lib_src)
if(WIN32)
    find_library(netsim netsimlib.lib lib)
else()
    find_library(netsim libnetsim.a lib)
endif()
if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
endif()
add_library(rdtcore ${rdt_lib_src})
add_executable(rdt_lab rdtmain.cc)
target_link_libraries(rdt_lab rdtcore ${netsim})
add_executable(rdt_test rdttest.cc)